# AI-translate

./: .gitignore  README.md  params.yaml  pyproject.toml  run_app.sh  translate.py  translated_descriptions.xlsx
src/: main.py  services.py
src/api/: api_wrapper.py  routes.py
src/app/: app.py
src/modules/: data_reader.py  model_config.py
src/utils/: utils.py
